03_wordpress_mysql_phpmyadmin/05_microk8s_kubernetes_nginx_ingress_dns_letsencrypt_certificates/general-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: phpmyadmin.p82.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
    - host: wordpress.p82.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
        - wordpress.p82.it
        - phpmyadmin.p82.it
      secretName: letsencrypt-prod # < cert-manager will store the created certificate in this secret.
